--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            
+            /*
+            Shorthand - background
+            color > image > position > repeat > [size] > attachment
+        */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
+
+        
+
+
+
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +41,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa quia eaque, totam reiciendis maxime optio dolore, fuga natus animi architecto eveniet fugiat illum. Sed, sint! Obcaecati numquam non officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores doloribus quo debitis sapiente voluptates culpa impedit eum vel. In ipsa tempora tempore quas aliquid, nisi repellat incidunt dolorum eveniet blanditiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore corporis, iure dolores explicabo optio illo quos. Numquam cum, vitae magnam nesciunt maxime doloribus tenetur perferendis quis quam perspiciatis temporibus ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa quia eaque, totam reiciendis maxime optio dolore, fuga natus animi architecto eveniet fugiat illum. Sed, sint! Obcaecati numquam non officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores doloribus quo debitis sapiente voluptates culpa impedit eum vel. In ipsa tempora tempore quas aliquid, nisi repellat incidunt dolorum eveniet blanditiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore corporis, iure dolores explicabo optio illo quos. Numquam cum, vitae magnam nesciunt maxime doloribus tenetur perferendis quis quam perspiciatis temporibus ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa quia eaque, totam reiciendis maxime optio dolore, fuga natus animi architecto eveniet fugiat illum. Sed, sint! Obcaecati numquam non officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores doloribus quo debitis sapiente voluptates culpa impedit eum vel. In ipsa tempora tempore quas aliquid, nisi repellat incidunt dolorum eveniet blanditiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore corporis, iure dolores explicabo optio illo quos. Numquam cum, vitae magnam nesciunt maxime doloribus tenetur perferendis quis quam perspiciatis temporibus ducimus?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa quia eaque, totam reiciendis maxime optio dolore, fuga natus animi architecto eveniet fugiat illum. Sed, sint! Obcaecati numquam non officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores doloribus quo debitis sapiente voluptates culpa impedit eum vel. In ipsa tempora tempore quas aliquid, nisi repellat incidunt dolorum eveniet blanditiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore corporis, iure dolores explicabo optio illo quos. Numquam cum, vitae magnam nesciunt maxime doloribus tenetur perferendis quis quam perspiciatis temporibus ducimus?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus culpa quia eaque, totam reiciendis maxime optio dolore, fuga natus animi architecto eveniet fugiat illum. Sed, sint! Obcaecati numquam non officiis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores doloribus quo debitis sapiente voluptates culpa impedit eum vel. In ipsa tempora tempore quas aliquid, nisi repellat incidunt dolorum eveniet blanditiis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore corporis, iure dolores explicabo optio illo quos. Numquam cum, vitae magnam nesciunt maxime doloribus tenetur perferendis quis quam perspiciatis temporibus ducimus?</p>
     </main>
 </body>
