--- a/pratica/index.html
+++ b/pratica/index.html
@@ -6,12 +6,48 @@
     <title>Prática de Sites</title>
     <style>
 
+        body {
+            margin: 0px;
+            background-color: rgb(255, 238, 84);
+        }
+        header {
+            margin: 0px;
+            padding: 15px;
+            background-image: linear-gradient(to bottom, white, rgba(128, 128, 128, 0.425));
+            box-shadow: 1px 1px 3px black;
+
+        }
+
+        header > h1 {
+            margin: 0px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            
+        }
+
+        main {
+            max-width: 500px;
+            padding: 20px;
+            margin-top: 20px;
+            background-color: white;
+            border: 2px solid transparent;
+            border-radius: 10px;
+            margin: auto;
+
+        }
+
+        main > h1 {
+            margin: auto;
+        }
+
+
     </style>
 </head>
 <body>
     <header>
-        <h1>Este é um teste de cores para um site pessoal</h1>
-        <p>Site feito por <a href="https://www.instagram.com/rafael_mirley" target="_blank">Rafael Mirley</a></p>
+        <h1>Curiosidades</h1>
     </header>
+    <main>
+        <h1>Teste</h1>
+    </main>
 </body>
 </html>
