--- a/Desafio/dsf012/index.html
+++ b/Desafio/dsf012/index.html
@@ -12,7 +12,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743]">Milton Duarte</a></p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +25,7 @@
     </section>
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -38,7 +38,7 @@
     </section>
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -61,7 +61,7 @@
     </section>
 
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -74,22 +74,26 @@
     </section>
 
 
-    <section>
-        Agora, escrevo e envio <br>
-        Chegando na mesma hora <br>
-        Mas quando vou prosear <br>
-        A pessoa foi embora <br>
-        Abriu outro aplicativo <br>
-        O mundo ficou cativo <br>
-        Da tecnologia do agora.
-
-        Felizmente, pra orar <br>
-        Não precisa de internet <br>
-        Deus escuta todo mundo <br>
-        Se quiser, faça esse teste <br>
-        Dois pontos são dois joelhos <br>
-        Seus lábios são aparelhos <br>
-        Deixe que Deus interprete.
+    <section class="normal">
+        <p>
+            Agora, escrevo e envio <br>
+            Chegando na mesma hora <br>
+            Mas quando vou prosear <br>
+            A pessoa foi embora <br>
+            Abriu outro aplicativo <br>
+            O mundo ficou cativo <br>
+            Da tecnologia do agora.
+        </p>
+        <br>
+        <p>
+            Felizmente, pra orar <br>
+            Não precisa de internet <br>
+            Deus escuta todo mundo <br>
+            Se quiser, faça esse teste <br>
+            Dois pontos são dois joelhos <br>
+            Seus lábios são aparelhos <br>
+            Deixe que Deus interprete.
+        </p>
     </section>
 
     <footer>
