criação do exercício 023 e atualizações

--- a/pratica/index.html
+++ b/pratica/index.html
@@ -8,19 +8,22 @@
 
         body {
             margin: 0px;
-            background-color: rgb(255, 238, 84);
+            background-color: rgb(175, 174, 174);
         }
         header {
             margin: 0px;
             padding: 15px;
-            background-image: linear-gradient(to bottom, white, rgba(128, 128, 128, 0.425));
+            background-image: linear-gradient(to bottom, rgba(99, 96, 255, 0.726), rgba(2, 0, 114, 0.63));
             box-shadow: 1px 1px 3px black;
 
         }
 
         header > h1 {
             margin: 0px;
+            color: white;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            text-align: center;
+            padding: 30px;
             
         }
 
@@ -30,13 +33,21 @@
             margin-top: 20px;
             background-color: white;
             border: 2px solid transparent;
-            border-radius: 10px;
+            border-radius: 0px 0px 10px 10px;
             margin: auto;
 
         }
 
         main > h1 {
             margin: auto;
+            text-align: center;
+
+        }
+
+        p {
+            color: rgb(0, 0, 0);
+            text-indent: 5px;
+            text-shadow: 2px 2px 3px black;
         }
 
 
@@ -48,6 +59,7 @@
     </header>
     <main>
         <h1>Teste</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis ad accusantium eligendi. Esse magni optio nobis illo animi pariatur enim, veniam deleniti, ut nam sapiente necessitatibus provident sunt voluptate eum.</p>
     </main>
 </body>
 </html>
