--- a/Exercícios/ex023/tabela002.html
+++ b/Exercícios/ex023/tabela002.html
@@ -35,7 +35,8 @@
 
         thead > tr > th {
             position: sticky;
-            top: 0;
+            top: -1px;
+            background-color: rgb(58, 58, 58);
         }
 
         tbody > tr:nth-child(2n) {
@@ -85,6 +86,102 @@
                 <td>Rio de Janeiro</td>
                 <td class="num">17 264 943</td>
             </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14 873 064</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11 433 957</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11 377 239</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9 557 071</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">8 602 865</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8 602 865</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7 164 788</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7 075 181</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7 018 354</td>
+            </tr>
+            <tr>
+                <td>Aamazonas</td>
+                <td class="num"> 4 144 597</td>
+            </tr>
+            <tr>
+                <td>Espírito Santo</td>
+                <td class="num">4 018 650</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4 018 127</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num">3 506 853</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3 484 466</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3 337 357</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3 237 227</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3 015 268</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num">2 778 986</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num">2 298 696</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1 777 225</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num">1 572 866</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num">881 935</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">845 935</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">605 761</td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
@@ -93,5 +190,10 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est consequatur placeat corporis. Ut voluptatibus consectetur quibusdam architecto dolorem quaerat voluptates, exercitationem autem, iusto ipsam culpa iste excepturi quis quod quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur magnam quas expedita vitae voluptatem! Officia ex temporibus explicabo a dicta vitae sit aperiam asperiores quas vel, amet non illum consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam voluptate iusto nihil magnam, similique dignissimos dolor praesentium hic quis perspiciatis velit numquam, asperiores at, harum ipsam. Fugiat illum repellendus natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam soluta, quisquam quis omnis asperiores consequuntur nulla qui reprehenderit hic officiis cum in sequi, dicta molestiae aut explicabo sed odio similique.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est consequatur placeat corporis. Ut voluptatibus consectetur quibusdam architecto dolorem quaerat voluptates, exercitationem autem, iusto ipsam culpa iste excepturi quis quod quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur magnam quas expedita vitae voluptatem! Officia ex temporibus explicabo a dicta vitae sit aperiam asperiores quas vel, amet non illum consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam voluptate iusto nihil magnam, similique dignissimos dolor praesentium hic quis perspiciatis velit numquam, asperiores at, harum ipsam. Fugiat illum repellendus natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam soluta, quisquam quis omnis asperiores consequuntur nulla qui reprehenderit hic officiis cum in sequi, dicta molestiae aut explicabo sed odio similique.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est consequatur placeat corporis. Ut voluptatibus consectetur quibusdam architecto dolorem quaerat voluptates, exercitationem autem, iusto ipsam culpa iste excepturi quis quod quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur magnam quas expedita vitae voluptatem! Officia ex temporibus explicabo a dicta vitae sit aperiam asperiores quas vel, amet non illum consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam voluptate iusto nihil magnam, similique dignissimos dolor praesentium hic quis perspiciatis velit numquam, asperiores at, harum ipsam. Fugiat illum repellendus natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam soluta, quisquam quis omnis asperiores consequuntur nulla qui reprehenderit hic officiis cum in sequi, dicta molestiae aut explicabo sed odio similique.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est consequatur placeat corporis. Ut voluptatibus consectetur quibusdam architecto dolorem quaerat voluptates, exercitationem autem, iusto ipsam culpa iste excepturi quis quod quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur magnam quas expedita vitae voluptatem! Officia ex temporibus explicabo a dicta vitae sit aperiam asperiores quas vel, amet non illum consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam voluptate iusto nihil magnam, similique dignissimos dolor praesentium hic quis perspiciatis velit numquam, asperiores at, harum ipsam. Fugiat illum repellendus natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam soluta, quisquam quis omnis asperiores consequuntur nulla qui reprehenderit hic officiis cum in sequi, dicta molestiae aut explicabo sed odio similique.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est consequatur placeat corporis. Ut voluptatibus consectetur quibusdam architecto dolorem quaerat voluptates, exercitationem autem, iusto ipsam culpa iste excepturi quis quod quae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur magnam quas expedita vitae voluptatem! Officia ex temporibus explicabo a dicta vitae sit aperiam asperiores quas vel, amet non illum consequatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam voluptate iusto nihil magnam, similique dignissimos dolor praesentium hic quis perspiciatis velit numquam, asperiores at, harum ipsam. Fugiat illum repellendus natus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam soluta, quisquam quis omnis asperiores consequuntur nulla qui reprehenderit hic officiis cum in sequi, dicta molestiae aut explicabo sed odio similique.</p>
 </body>
 </html>
