--- a/Exercícios/ex025/form004.html
+++ b/Exercícios/ex025/form004.html
@@ -8,19 +8,26 @@
 <body>
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="post" autocomplete="on">
-        <p>
-            <label for="iemail">E-mail</label>
-            <input type="email" name="email" id="iemail" required autocomplete="email">
-        </p>
-        <p>
-            <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^[0-9]$" required>
-        </p>
-        <!--Estudar mais sobre RegEx: Regular Expressions-->
-        <p>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpar">
-        </p>
+        <fieldset>
+            <legend>Dados pessoais</legend>
+            <p>
+                <label for="inome">Nome</label>
+                <input type="text" name="nome" id="inome" required autocomplete="name">
+            </p>
+            <p>
+                <label for="iemail">E-mail</label>
+                <input type="email" name="email" id="iemail" required autocomplete="email">
+            </p>
+            <p>
+                <label for="itel">Telefone</label>
+                <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)[0-9]{4,5}-[0-9]{4}$" required placeholder="(xx) xxxx-xxxx">
+            </p>
+            <!--Estudar mais sobre RegEx: Regular Expressions-->
+            <p>
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+            </p>
+        </fieldset>
         
     </form>
 </body>
