--- a/Exercícios/ex025/form005.html
+++ b/Exercícios/ex025/form005.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulários</title>
+    <style>
+        * {
+            padding: 10px;
+        }
+
+        fieldset {
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Exemplo de Formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
         <fieldset>
+            <legend>Sexo</legend>
+            <input type="radio" name="sexo" id="isxmas" value="M"> <label for="isxmas">Masculino</label> <br>
+            <input type="radio" name="sexo" id="isxfem" value="F"> <label for="isxfem">Feminino</label>
+        </fieldset>
+        <fieldset>
             <legend>Esportes Favoritos</legend>
-            <input type="checkbox" name="esfut" id="iesfut"> Futebol<br>
-            <input type="checkbox" name="esbas" id="iesbas"> Basquete<br>
-            <input type="checkbox" name="esnat" id="iesnat">Natação<br>
-            <input type="checkbox" name="esten" id="iesten"> Tênis<br>
+            <input type="checkbox" name="esfut" id="iesfut"> <label for="iesfut">Futebol</label><br>
+            <input type="checkbox" name="esbas" id="iesbas"> <label for="iesbas">Basquete</label><br>
+            <input type="checkbox" name="esnat" id="iesnat"><label for="iesnat">Natação</label><br>
+            <input type="checkbox" name="esten" id="iesten"> <label for="iesten">Tênis</label><br>
         </fieldset>
 
 
